--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "superagent": "^4.0.0-beta.5",
     "supertest": "^3.3.0"
   },
+  "devDependencies": {
+    "jsdoc": "^3.6.2",
+    "swagger-jsdoc": "^3.2.9",
+    "swagger-ui-express": "^4.0.5"
+  },
   "directories": {
     "lib": "lib"
   },
